Changes for compatibility with pystencils 2.0

--- a/doc/notebooks/demo_interpolation_boundary_conditions.ipynb
+++ b/doc/notebooks/demo_interpolation_boundary_conditions.ipynb
@@ -8,9 +8,7 @@
    "source": [
     "from IPython.display import clear_output\n",
     "from lbmpy.session import *\n",
-    "from lbmpy.relaxationrates import relaxation_rate_from_lattice_viscosity\n",
-    "\n",
-    "from pystencils.typing import BasicType, TypedSymbol"
+    "from lbmpy.relaxationrates import relaxation_rate_from_lattice_viscosity"
    ]
   },
   {
