--- a/tests/test_sparse_lbm.ipynb
+++ b/tests/test_sparse_lbm.ipynb
@@ -215,9 +215,9 @@
       ],
       "text/plain": [
        "{d₀: d_C__0, d₁: d_C__1, d₂: d_C__2, d₃: d_C__3, d₄: d_C__4, d₅: d_C__5, d₆: d\n",
-       "_C__6, d₇: d_C__7, d₈: d_C__8, f₀: f_C__0, f₁: f_230e3b803240, f₂: f_289eb36bd\n",
-       "a17, f₃: f_9b89b8fbc23f, f₄: f_c4931596c1cb, f₅: f_a50cd35dd60b, f₆: f_618a24a\n",
-       "1c6d2, f₇: f_ed3b6430ecce, f₈: f_8f80b5cc043c}"
+       "_C__6, d₇: d_C__7, d₈: d_C__8, f₀: f_C__0, f₁: f_90e8a363d81d, f₂: f_84cf209b1\n",
+       "9e8, f₃: f_20435f2dfd8e, f₄: f_1b97e5aad5c8, f₅: f_b6addb4a5f44, f₆: f_bb89351\n",
+       "3e9ec, f₇: f_7d89efe28aa0, f₈: f_e8b951c1cd37}"
       ]
      },
      "execution_count": 8,
@@ -250,7 +250,14 @@
     "collision_rule = method.get_collision_rule()\n",
     "update_rule = collision_rule.new_with_substitutions(symbol_subs)\n",
     "\n",
-    "config = ps.CreateKernelConfig(ghost_layers=((0, 0),), target=target)\n",
+    "from lbmpy._compat import IS_PYSTENCILS_2\n",
+    "\n",
+    "if IS_PYSTENCILS_2:\n",
+    "    config = ps.CreateKernelConfig(ghost_layers=((0, 0),), target=target, index_dtype=\"uint32\")\n",
+    "else:\n",
+    "    config = ps.CreateKernelConfig(ghost_layers=((0, 0),), target=target)\n",
+    "\n",
+    "\n",
     "kernel_stream_collide = ps.create_kernel(update_rule, config=config).compile()"
    ]
   },
