--- a/doc/notebooks/09_tutorial_shanchen_twocomponent.ipynb
+++ b/doc/notebooks/09_tutorial_shanchen_twocomponent.ipynb
@@ -52,7 +52,7 @@
     "rho0 = 1.\n",
     "\n",
     "stencil = LBStencil(Stencil.D2Q9)\n",
-    "weights = get_weights(stencil, c_s_sq=sp.Rational(1, 3))"
+    "weights = get_weights(stencil)"
    ]
   },
   {
